# markless

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  TEST-README.md  TODO.md  test-rendering.md
.claude/skills/release/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
benches/: parsing.rs  rendering.rs
examples/: 01-headings.md  02-paragraphs-emphasis.md  03-lists.md  04-code-blocks.md  05-blockquotes.md  06-links-images.md  07-tables.md  08-horizontal-rules.md  09-footnotes.md  10-complex-nesting.md  11-description-lists.md  12-real-world-readme.md  13-syntax-test.md  14-mermaid-diagrams.md  test-rendering.md
scripts/: check.sh
src/: app.rs  config.rs  lib.rs  main.rs  mermaid.rs  perf.rs
src/app/: effects.rs  event_loop.rs  input.rs  mod.rs  model.rs  tests.rs  update.rs
src/document/: mod.rs  parser.rs  types.rs
src/editor/: buffer.rs  mod.rs
src/highlight/: mod.rs
src/image/: loader.rs  mod.rs  protocol.rs
src/input/: mod.rs
src/mermaid_renderer/: config.rs  layout.rs  mod.rs  parser.rs  render.rs
src/search/: mod.rs
src/ui/: images.rs  mod.rs  overlays.rs  render.rs  status.rs  style.rs  tests.rs  viewport.rs
src/ui/widgets/: mod.rs
src/watcher/: mod.rs
tests/: config_integration.rs
tests/fixtures/: simple.md
